--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@
   padding: 0 10px 0 10px;
   box-sizing: border-box;
 }
+
 /* app */
 .items {
   display: flex;
@@ -36,6 +37,7 @@
 .iten_button:hover {
   cursor: pointer;
 }
+
 /* Explorer Bar */
 .explorer_bar {
   height: 6vh;
@@ -66,9 +68,43 @@
 .space {
   width: 2px;
   height: 50px;
-  background-color: black;
+  background-color: rgba(211, 211, 211, 0.527);
   margin-left: 5px;
 }
 .open_pages {
   width:90vw;
+}
+
+/* Start menu */
+.start_menu {
+  background-color:white;
+  position:fixed;
+  height: 300px;
+  width:200px;
+  bottom: 55px;
+  display:flex; 
+}
+.start_menu_left_bar {
+  height:20px;
+  background-color:#0000ff;
+  height: 300px;
+}
+.start_menu_itens {
+  display:flex;
+  flex-direction:column;
+}
+.start_menu_item {
+  padding: 10px 0 10px 0;
+}
+.start_menu_item:hover {
+  border: 2px solid black;
+}
+
+.arrow_right {
+  margin-left:70%;
+}
+
+/*DISABLE DISPLAY VIEW*/
+.disabled {
+  display:none;
 }
