--- a/style/style.css
+++ b/style/style.css
@@ -171,26 +171,62 @@
   width: 101px;
 }
 /* WEATHER APP */
- .weather_app {
+.weather_app {
   width: 300px;
-  height:400px;
- }
+  height: 400px;
+}
 .tempo {
-  display:flex;
-  flex-wrap:wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 .cidade {
   margin: 10px;
   border: 2px solid black;
   padding: 5px;
-  font-size:17px;
-  text-align:center;
+  font-size: 17px;
+  text-align: center;
 }
 .weather_app .container {
-  text-align:center;
-
+  text-align: center;
 }
 
+/* cep app */
+.cep_app {
+  width: 600px;
+  text-align: center;
+}
+.cep_app .titulo {
+  font-size: 18px;
+}
+.inputContainer .cepInput {
+  font-size: 18px;
+  height: 30px;
+}
+.inputContainer .adicionarBtn {
+  font-size: 18px;
+  padding: 5px;
+}
+.mensagemErro {
+  font-size: 18px;
+  color: red;
+  padding: 10px 0 10px 0;
+}
+.tabela {
+  margin: 0 auto;
+}
+/* table style */
+.tableHeadItem {
+  border: 2px solid black;
+  padding: 5px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.tableContent {
+  border: 2px solid black;
+  font-size: 16px;
+  padding: 5px;
+  align-items: center;
+}
 
 /*CHANGE DISPLAY VIEW*/
 .disabled {
