--- a/style/style.css
+++ b/style/style.css
@@ -95,6 +95,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2px 5px 2px 5px;
   font-size: 18px;
   font-weight: bold;
   background-color: #d9d9d9;
