add new background color for calculator input

--- a/Projects/Calculadora/style.css
+++ b/Projects/Calculadora/style.css
@@ -32,3 +32,7 @@
 .calculator_buttons .backspace {
   width: 101px;
 }
+#calculadora__principal--mostrador {
+  background-color: #fff;
+  color: black;
+}
