--- a/style/style.css
+++ b/style/style.css
@@ -155,6 +155,19 @@
   margin-left: 60%;
   font-weight: bold;
 }
+/* Contact */
+.contact {
+  min-width: 50px;
+  max-width: 300px;
+}
+.contact .window-body {
+  padding: 10px;
+  font-size: 15px;
+  line-height: 1.2rem;
+}
+.contact-name {
+  margin-top: 5px;
+}
 
 /*CHANGE DISPLAY VIEW*/
 .disabled {
