--- a/style/style.css
+++ b/style/style.css
@@ -116,18 +116,21 @@
 
 /* Start menu */
 .start_menu {
-  background-color: white;
-  position: fixed;
+  background-color: silver;
+  position: absolute;
   height: 300px;
   width: 200px;
-  bottom: 56px;
-  left: 2px;
+  bottom: 42px;
+  left: 0px;
   display: flex;
   padding: 0 0 4px 4px;
+  box-shadow: 7px -4px 8px -2px rgba(0, 0, 0, 0.67),
+    -4px -5px 8px -2px rgba(0, 0, 0, 0.67),
+    inset 5px -5px 8px -2px rgba(0, 0, 0, 0.67);
 }
 .start_menu_left_bar {
   background: linear-gradient(360deg, navy, #1084d0);
-  height: 300px;
+  height: 298px;
   width: 40px;
   display: flex;
   flex-direction: column;
@@ -144,9 +147,12 @@
   display: flex;
   flex-direction: column;
   width: 90%;
+  padding-left: 10px;
 }
 .start_menu_item {
-  padding: 10px 0 10px 0;
+  padding: 10px 0 10px 5px;
+  font-weight: bold;
+  font-size: 14px;
 }
 .start_menu_item:hover {
   border: 2px solid black;
